helm-values/gitlab/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-route
  namespace: gitlab
spec:
  parentRefs:
  - name: greencap-gateway
    namespace: default
    sectionName: web
  hostnames:
  - "gitlab.greencap"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: gitlab-webservice-default
      port: 8181
